Updated game of life serial non template

--- a/serial_non_template/Makefile
+++ b/serial_non_template/Makefile
@@ -13,7 +13,14 @@ all: gol
 extra: gol.papi 
 
 gol: main.cpp SerialGoL.cpp
-	$(CXX) $(CXXFLAGS) -O3 SerialGoL.cpp main.cpp -o gol
+	$(CXX) $(CXXFLAGS) -O3 SerialGoL.cpp main.cpp -o gol 
+
+
+gol-f1: main.cpp SerialGoL.cpp
+	$(CXX) $(CXXFLAGS) -O3 -pg SerialGoL.cpp main.cpp -o gol -L/home/j_lehr/all_repos/gh-jplehr-typeart-benchmarks/memlib -lmemlib
+
+gollll: main.cpp SerialGoL.cpp
+	$(CXX) $(CXXFLAGS) -O3 -pg SerialGoL.cpp main.cpp -o gol
 
 gol-papi: main.cpp
 	$(CXX) $(CXXFLAGS) -O2 $(PAPI_INC_FLAGS) main.cpp -o gol.papi $(PAPI_LD_FLAGS)
